--- a/src/App.css
+++ b/src/App.css
@@ -168,7 +168,6 @@ html, body, #root { width: 100%; min-height: 100vh; }
   background-color: #eee;
 }
 
-/* 行程列表 */
 .mini-trip-list {
   display: flex;
   flex-direction: column;
@@ -193,4 +192,34 @@ html, body, #root { width: 100%; min-height: 100vh; }
   background: #fff;
   border-color: #514b4b;
   box-shadow: 0 2px 8px rgba(152, 148, 148, 0.05);
+}
+
+.Login-container {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: url('https://grinews.com/news/wp-content/uploads/2020/11/JMOY654.jpg'); 
+  background-size: cover;
+  background-position: center;
+  position: relative;
+}
+
+.Login-container::before {
+  content: '';
+  position: absolute;
+  top: 0; left: 0; right: 0; bottom: 0;
+  background: rgba(0, 0, 0, 0.4);
+}
+
+.Login-card {
+  position: relative;
+  background: white;
+  padding: 35px;
+  width: 90%;
+  max-width: 400px;
+  border-radius: 12px;
+  box-shadow: 0 20px 50px rgba(0,0,0,0.3);
+  animation: slideIn 0.3s ease-out;
 }
