--- a/src/App.css
+++ b/src/App.css
@@ -55,7 +55,7 @@ html, body, #root { width: 100%; min-height: 100vh; }
 .hero-section {
   width: 100%;
   height: 500px;
-  background-image: url('https://i0.wp.com/www.tripresso.com/blog/wp-content/uploads/2020/02/shutterstock_256863688.jpg?w=1000&ssl=1'); /* 雪景圖 */
+  background-image: url('https://i0.wp.com/www.tripresso.com/blog/wp-content/uploads/2020/02/shutterstock_256863688.jpg?w=1000&ssl=1'); 
   background-size: cover;
   background-position: center;
   display: flex;
